# augustfeng.app

./: .gitattributes  .gitignore  .sops.yaml  Makefile  README.md  README.org  augustfeng.cue  config.cue  go.mod  go.sum  kubeconfig.yaml  readme.md  readme.org  vendor_tool.cue
.github/: Makefile  terraform.cue  workflows.cue  workflows_tool.cue
apps/: apps_tool.cue  blog.cue  kubernetes.blog.cue  pipelines.cue  script_tool.cue
apps/domain/: .gitignore  Cargo.toml  Dockerfile  Makefile  manifests.cue  pipeline.cue  readme.org  skaffold.yaml
apps/domain/k8s/: rbac.yaml  readme.org  workload.yaml
apps/domain/src/: gcp.rs  kubernetes.rs  main.rs
apps/scraper/: .gitignore  Cargo.toml  readme.org
apps/scraper/src/: main.rs  parser.rs  utils.rs
cloud/: crds.cue  gcp.cue  kubernetes.appofapps.cue  kubernetes.cert-manager.cue  kubernetes.cue  kubernetes.external-dns.cue  kubernetes.traefik.cue  nginx.cue  pipeline.cloud.cue  pipeline.cue  terraform.cue  terraform.digitalocean.cue  terraform.gcp.cue  terraform.github.cue  terraform.kubernetes.cue  terraform_tool.cue
containers/: containers.cue  main.cue  pipeline.cue
cue.mod/: module.cue
kubernetes/: Makefile  README.org  blog.cue  downstream.cue  example.cue  main.libsonnet  manifests.cue  manifests_tool.cue  utils.libsonnet
secrets/: github-secrets.enc.json  google-credentials.enc.json  lets-encrypt-secrets.enc.json  namecheap-secrets.enc.json  secrets.cue  secrets_tool.cue  terraform-cloud-secrets.enc.json
terraform/: Makefile  README.org  config.cue  do.cue  gcp.cue  terraform.cue  terraform_tool.cue
(+354 files in other folders)
