[package]
name = "domain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.27"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.154", features = ["derive"]}
serde_json = "1.0.94"
tokio = { version = "1.12.0", features = ["full"] }
