[package]
name = "scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fantoccini = "0.19.3"
futures = "0.3.28"
scraper = "0.16.0"
serde_json = "1.0.97"
tokio = { version = "1.28.2", features = ["full"] }
